# spring-2026-lab09-siruwuu

./: .gitignore  README.md  pyproject.toml
simple-agent-observability/: agent.py  analysis-mcp-observability.md  analysis.md
simple-memory-agent/: agent.py  agent_api.py  alice_output.txt  alice_session1.sh  alice_session2.sh  analysis.md  carol_output.txt  carol_session1.sh  memory_manager.py  reset_users.py
simple-memory-agent/prompts/: system_prompt.txt
